Table "users" {
  "id" INT [pk, increment]
  "name" VARCHAR(100) [not null]
  "email" VARCHAR(100) [unique, not null]
  "nip" VARCHAR(11) [unique, not null]
  "phone" VARCHAR(20) [unique, not null]
  "password" VARCHAR(255) [not null]
  "created_userid" INT
  "updated_userid" INT
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "roles" {
  "id_role" INT [pk, increment]
  "name_role" VARCHAR(50) [not null]
}

Table "user_roles" {
  "id_user" INT [not null]
  "id_role" INT [not null]

  Indexes {
    (id_user, id_role) [pk]
  }
}

Table "permissions" {
  "id" INT [pk, increment]
  "name" VARCHAR(50) [unique, not null]
}

Table "role_permissions" {
  "id_role" INT [not null]
  "id_permission" INT [not null]

  Indexes {
    (id_role, id_permission) [pk]
  }
}

Ref:"users"."id" < "user_roles"."id_user" [delete: cascade]

Ref:"roles"."id_role" < "user_roles"."id_role" [delete: cascade]

Ref:"roles"."id_role" < "role_permissions"."id_role" [delete: cascade]

Ref:"permissions"."id" < "role_permissions"."id_permission" [delete: cascade]
